# ManualCellLabeler

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LABEL_UPDATE_LOGIC.md  README.md  app.py  app_single_dataset.py  create_roi_h5.py  docker-compose.yml  pyproject.toml  run.sh  testing.ipynb  update_labels_from_log.py
.claude/: settings.local.json
deprecated/: app_single_dataset.py
