[project]
name = "manualcelllabeler"
version = "0.1.0"
description = "Interactive GUI for modifying neurons' genetic ID based on labels.csv, NeuroPAL.h5 and optionally, processed_h5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "codex>=1.8.22",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pynrrd>=1.1.3",
    "streamlit>=1.52.1",
]
